frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deploy
  namespace: ui-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui-cont
        image: containerclchatbotuat.azurecr.io/ui:221
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: ui-namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: ui-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - genie-chatbot-uat.dc.capitaland.com  
    secretName: ingress-tls-csi
  rules:
  - host: genie-chatbot-uat.dc.capitaland.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-svc  
            port:
              number: 80
