manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bot-logic
---
apiVersion: v1
kind: Service
metadata:
  name: bot-logic
  namespace: bot-logic
spec:
  selector:
    app: bot-logic
  ports:
    - protocol: TCP
      port: 3978
      targetPort: 3978
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-logic
  namespace: bot-logic
  labels:
    app: bot-logic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-logic
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: bot-logic
      annotations:
        kubernetes.azure.com/no-http-proxy-vars: "true"
      labels:
        app: bot-logic
    spec:
      containers:
        - name: bot-logic
          image: containerclchatbotuat.azurecr.io/bot-logic:0.0.1
          imagePullPolicy: Always
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-keyvault-secret-provider"
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bot-logic-ingress
  namespace: bot-logic
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - genie-chatbot-uat.dc.capitaland.com
      secretName: ingress-tls-csi
  rules:
    - host: genie-chatbot-uat.dc.capitaland.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bot-logic
                port:
                  number: 3978
